<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/divider_line"
    android:orientation="vertical"
    android:showDividers="middle|end|beginning"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@android:color/black"
            android:text="@string/main_zj_sdcard"
            android:textSize="@dimen/chat_item_testsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:text="/sdcard/smartinfo/"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="@dimen/chat_item_testsize" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="5dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="展示右边图片"
            android:textSize="@dimen/chat_item_testsize" />

        <Switch
            android:id="@+id/switchPrint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:checked="true"
            android:gravity="center" />
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"
            android:textColor="@android:color/black"
            android:text="@string/main_video_settting"
            android:textSize="@dimen/chat_item_testsize" />

        <RadioGroup
            android:id="@+id/switchGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:checked="true"
            android:gravity="center|top"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/raVideoSetting"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingLeft="10dp"
                android:background="@drawable/radio_select_bg"
                android:gravity="center"
                android:text="@string/video_settting"
                android:layout_marginBottom="1dp"
                android:textSize="@dimen/chat_item_testsize" />


            <RadioButton
                android:id="@+id/raImgSetting"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_select_bg"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:layout_marginTop="1dp"
                android:text="@string/img_settting"
                android:textSize="@dimen/chat_item_testsize" />
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/main_setting_delay"
            android:textColor="@android:color/black"
            android:textSize="@dimen/chat_item_testsize" />

        <EditText
            android:id="@+id/et_delay"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:background="@drawable/edittext_input_bg"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btnSetdelayTime" />

        <Button
            android:id="@+id/btnSetdelayTime"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_comfirm_bg"
            android:checked="true"
            android:gravity="center"
            android:textSize="@dimen/chat_item_testsize"
            android:text="@string/comfirm"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/main_right_setting_delay"
            android:textColor="@android:color/black"
            android:textSize="@dimen/chat_item_testsize" />

        <EditText
            android:id="@+id/et_rightdelay"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:background="@drawable/edittext_input_bg"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btnRightSetdelayTime" />

        <Button
            android:id="@+id/btnRightSetdelayTime"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_comfirm_bg"
            android:checked="true"
            android:gravity="center"
            android:text="@string/comfirm"
            android:textSize="@dimen/chat_item_testsize"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</LinearLayout>